src/objects/Sequence_Action__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Execution_Date__c</fullName>
        <label>Actual Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CadenceAction_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action ID</label>
        <referenceTo>CadenceAction__c</referenceTo>
        <relationshipLabel>Sequence Actions</relationshipLabel>
        <relationshipName>Sequence_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cadence_Action_Activation__c</fullName>
        <formula>TEXT( CadenceAction_ID__r.Action_Id__r.Activation_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Activation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cadence_Action_Name__c</fullName>
        <formula>CadenceAction_ID__r.Action_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cadence_Action_Template__c</fullName>
        <formula>CadenceAction_ID__r.Action_Id__r.Template_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cadence_Action_Type__c</fullName>
        <formula>TEXT( CadenceAction_ID__r.Action_Id__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cadence_Name__c</fullName>
        <formula>CadenceAction_ID__r.Cadence_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cadence_Priority__c</fullName>
        <formula>TEXT( CadenceAction_ID__r.Cadence_Id__r.matching_priority__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence_Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cadence_Type__c</fullName>
        <formula>TEXT( CadenceAction_ID__r.Cadence_Id__r.Record_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sequence Actions</relationshipLabel>
        <relationshipName>Sequence_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Execution_Date__c</fullName>
        <label>Expected Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Sequence Actions</relationshipLabel>
        <relationshipName>Sequence_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Email__c</fullName>
        <formula>Contact_Id__r.Email &amp;  Lead_Id__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_ID__c</fullName>
        <formula>Contact_Id__c  &amp;  Lead_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Name__c</fullName>
        <formula>Contact_Id__r.FirstName &amp;&quot; &quot;&amp; Contact_Id__r.LastName &amp;  Lead_Id__r.FirstName  &amp;&quot; &quot;&amp; Lead_Id__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Priority__c</fullName>
        <formula>TEXT( Contact_Id__r.Priority__c)&amp; TEXT( Lead_Id__r.Priority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Type__c</fullName>
        <formula>IF(ISBLANK(Contact_Id__c)=FALSE,&quot;Contact&quot;,
IF(ISBLANK(Lead_Id__c)=FALSE,&quot;Lead&quot;,&quot;Unknown&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_on_Target_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Expected_Execution_Date__c</fullName>
        <formula>IF( AND( Participant_Type__c = &quot;Contact&quot;, ISBLANK(Contact_Id__r.EntranceCriteria_Matched_Date__c) = TRUE),
			Contact_Id__r.EntranceCriteria_Matched_Date__c + 
		(	CadenceAction_ID__r.Day__c +
 (CadenceAction_ID__r.Hour__c /24)) 			 
			,  
			
			IF(AND(Participant_Type__c = &quot;Lead&quot;,ISBLANK(Lead_Id__r.EntranceCriteria_Matched_Date__c)=TRUE),
						Lead_Id__r.EntranceCriteria_Matched_Date__c+
					(	CadenceAction_ID__r.Day__c + 
			   (CadenceAction_ID__r.Hour__c /24))
						,
			
			NOW()
		
		))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Expected Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isActionPerformed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActionPerformed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeferred</label>
        <type>Checkbox</type>
    </fields>
    <label>Sequence Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sequence Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequence Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>